segundo tp commit

--- a/TP1/Consignas.ipynb
+++ b/TP1/Consignas.ipynb
@@ -8,7 +8,6 @@
     "\n",
     "Fecha entrega: 28/10/2023.\n",
     "\n",
-    "Las entregas se enumeran a continuación\n",
     "\n",
     "a. EDA personal: Enfocarse en las variables order_has_email y order_has_phone respecto a la conversión mensual y compararlo a las variables de horario segun zona geografica.\n",
     "\n",
@@ -122,6 +121,23 @@
     "UTC-10: Esta es una zona horaria que está 10 horas detrás del Tiempo Universal Coordinado (UTC). Se utiliza en algunas partes de Hawái y otras islas del Pacífico, y se conoce como Hawaii Standard Time (Hora Estándar de Hawái).\n",
     "\n",
     "UTC-9: Esta es una zona horaria que está 9 horas detrás del Tiempo Universal Coordinado (UTC). No es una zona horaria estándar ampliamente reconocida, pero puede usarse en algunas ubicaciones específicas, como las Islas Marquesas en la Polinesia Francesa."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El \"Pirámide Principle\" (Principio de la Pirámide) de Barbara Minto es un enfoque de comunicación efectiva que se utiliza en la redacción y presentación de información de manera clara y lógica. Este principio se desarrolló en el contexto de la consultoría de gestión y se ha convertido en una técnica ampliamente utilizada en diversos campos, incluyendo negocios, comunicaciones técnicas y redacción de informes. La idea principal detrás del Pirámide Principle es estructurar la información de manera que la parte más importante y esencial se presente al principio, seguida de detalles y explicaciones de apoyo.\n",
+    "\n",
+    "El enfoque se llama \"Pirámide\" porque la estructura de la comunicación se asemeja a una pirámide invertida, con la información más importante en la parte superior. La estructura de la comunicación se divide en tres niveles:\n",
+    "\n",
+    "Resumen: En la parte superior de la pirámide se encuentra un resumen conciso que presenta la idea principal o conclusión. Este es el punto de partida y la primera cosa que se comunica. Debe responder a la pregunta \"¿Qué?\" de manera clara y directa.\n",
+    "\n",
+    "Detalles: A medida que desciendes en la pirámide, se presentan los detalles y las explicaciones que respaldan el resumen. Aquí se responden las preguntas \"¿Por qué?\" y \"¿Cómo?\" Se proporcionan argumentos, evidencia y razonamientos que respaldan la conclusión.\n",
+    "\n",
+    "Soporte: En la base de la pirámide se encuentran los detalles adicionales y el apoyo técnico. Esto incluye datos, estadísticas, ejemplos y cualquier información adicional que pueda ser necesaria para una comprensión completa del tema.\n",
+    "\n",
+    "La idea clave del Pirámide Principle es que el lector o la audiencia obtenga lo más importante al principio y pueda tomar decisiones o comprender la información esencial sin necesidad de profundizar en los detalles a menos que sea necesario. Esto es particularmente útil en informes y presentaciones donde la gente a menudo tiene poco tiempo y necesita una comprensión rápida de los conceptos clave."
    ]
   }
  ],
