--- a/TP2/ejercicio_orders_part2.ipynb
+++ b/TP2/ejercicio_orders_part2.ipynb
@@ -6,7 +6,7 @@
     "tags": []
    },
    "source": [
-    "# Orders - Multivariate Regression of  the `review_score`"
+    "Orders - Multivariate Regression of  the `review_score`"
    ]
   },
   {
