--- a/TP2/ejercicio_orders_part1.ipynb
+++ b/TP2/ejercicio_orders_part1.ipynb
@@ -100,6 +100,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#saque la carpeta /Data del repositorio "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -118,7 +125,6 @@
     }
    ],
    "source": [
-    "# Import olist data\n",
     "from olist.load_data import load_all_data\n",
     "data = load_all_data(\"data/\")"
    ]
