--- a/TP4/Resolucion.TP4.ipynb
+++ b/TP4/Resolucion.TP4.ipynb
@@ -1708,9 +1708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos ver que el árbol de decisión funciona bastante bien, excepto para el yute que lo confunde mucho con arroz y el mothbeans con blackgram. Comete algunos errores más pero ninguno tan relevante.\n",
-    "\n",
-    "Podemos ver que algunos los predice a la perfección y otros con errores. Cantidad de valores mal predichos: 49"
+    "Podemos ver que el árbol de decisión funciona bastante bien, excepto para el yute que lo confunde mucho con arroz y el mothbeans con blackgram. Comete algunos errores más pero ninguno tan relevante.Podemos ver que algunos los predice a la perfección y otros con errores. Cantidad de valores mal predichos: 49"
    ]
   },
   {
