--- a/Ejercicios/00-Modelo Parcial.ipynb
+++ b/Ejercicios/00-Modelo Parcial.ipynb
@@ -1425,6 +1425,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Verdaderos positivos (TP): 62\n",
+    "* Verdaderos negativos (TN): 269\n",
+    "* Falsos positivos (FP): 23\n",
+    "* Falsos negativos (FN): 28\n",
+    "\n",
+    "**Métricas de Evaluación**:\n",
+    "\n",
+    "Exactitud (Accuracy):\n",
+    "\n",
+    "La exactitud es la proporción de predicciones correctas en relación con todas las predicciones.\n",
+    "Fórmula: (TP + TN) / (TP + TN + FP + FN)\n",
+    "En tu caso, la exactitud es aproximadamente 0.866 o 86.6%.\n",
+    "\n",
+    "Precisión (Precision):\n",
+    "\n",
+    "La precisión es la proporción de verdaderos positivos respecto a todas las instancias predichas como positivas.\n",
+    "Fórmula: TP / (TP + FP)\n",
+    "En tu caso, la precisión es aproximadamente 0.906 o 90.6%.\n",
+    "\n",
+    "Recall (Sensibilidad o Tasa de Verdaderos Positivos):\n",
+    "\n",
+    "El recall es la proporción de verdaderos positivos respecto a todas las instancias reales que son positivas.\n",
+    "Fórmula: TP / (TP + FN)\n",
+    "En tu caso, el recall es aproximadamente 0.921 o 92.1%\n",
+    "\n",
+    "\n",
+    "Interpretación:\n",
+    "\n",
+    "* La exactitud mide la proporción general de predicciones correctas.\n",
+    "* La precisión se centra en la proporción de instancias predichas como positivas que realmente son positivas.\n",
+    "* El recall se centra en la proporción de instancias reales positivas que el modelo ha identificado correctamente.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {},
