--- a/Ejercicios/bases.ipynb
+++ b/Ejercicios/bases.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importaciones básicas"
+    "### Librerias basicas"
    ]
   },
   {
@@ -23,14 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lecturas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "CSV"
+    "### Lecturas de archivos"
    ]
   },
   {
@@ -52,10 +45,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "TXT"
+    "tweets = pd.read_csv(\"Clean_Top_1000_Youtube_df - youtubers_df.txt\", sep='\\t', header=0)    #TXT"
    ]
   },
   {
@@ -64,14 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tweets = pd.read_csv(\"Clean_Top_1000_Youtube_df - youtubers_df.txt\", sep='\\t', header=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Excel: Puedes especificar la hoja con 'sheet_name' si el archivo Excel tiene múltiples hojas"
+    "df_excel = pd.read_excel('archivo.xlsx', sheet_name='nombre_hoja') #Excel: Puedes especificar la hoja con 'sheet_name' si el archivo Excel tiene múltiples hojas"
    ]
   },
   {
@@ -80,14 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_excel = pd.read_excel('archivo.xlsx', sheet_name='nombre_hoja')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "JSON"
+    "df_json = pd.read_json('archivo.json') #JSON"
    ]
   },
   {
@@ -96,30 +77,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_json = pd.read_json('archivo.json')"
+    "df = pd.read_csv('mLabel_tweets.tsv', sep='\\t', encoding='latin1')  #TSV"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('mLabel_tweets.tsv', sep='\\t', encoding='latin1')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "El error UnicodeDecodeError indica que hay un problema al intentar decodificar el archivo con el codec UTF-8. Algunos de los codecs comunes son 'utf-8', 'latin1', 'utf-16', entre otros. "
+    "El error UnicodeDecodeError indica que hay un problema al intentar decodificar el archivo con el codec UTF-8. \n",
+    "\n",
+    "Algunos de los codecs comunes son 'utf-8', 'latin1', 'utf-16', entre otros. "
    ]
   },
   {
@@ -347,18 +314,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hay columnas de distintos tipos. \n",
-    "\n",
-    "Podemos ver que las únicas columnas con muchos nulos son dbh y plot_size.\n",
-    "\n",
-    "La columna date no está en el formato correcto."
+    "* Hay columnas de distintos tipos. \n",
+    "* Podemos ver que las únicas columnas con muchos nulos son dbh y plot_size.\n",
+    "* La columna date no está en el formato correcto."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Proporciona estadísticas descriptivas para columnas numéricas, como recuento, media, desviación estándar, mínimo, máximo y percentiles."
+    "Estadísticas descriptivas para columnas numéricas, como recuento, media, desviación estándar, mínimo, máximo y percentiles."
    ]
   },
   {
